--- a/outline.Rmd
+++ b/outline.Rmd
@@ -110,7 +110,7 @@ We're going to go back and forth between bare-bones examples and arguments from 
   * Logic must be airtight (inescapable)
 * Syllogisms introduction
   * Suppositionally inescapable; inescapable
-* Truth tables 
+* Truth contingency tables 
 * Necessary and sufficient
 * Syllogisms 
   * Suppositionally inescapable, inescapable, suppositionally solid, solid
