--- a/outline.Rmd
+++ b/outline.Rmd
@@ -99,7 +99,7 @@ knitr::include_graphics("imagesForRmd/BruceSignificPvalueDefintn.png")
   * Excess of statistical comparisons
   * More reasons given later in the class, after logic and arguments
 
-###  Arguments and logic , Week 9-
+###  Arguments and logic , Week 9-10
 
 We're going to go back and forth between bare-bones examples and arguments from the wild, giving you more and more tools to deal with the real-world ones.
 
@@ -138,15 +138,30 @@ We're going to go back and forth between bare-bones examples and arguments from 
 * Analysing scientific abstracts
 * Analysing the Molly and Bea argument
 
-Week 10: Fallacies. <!-- "8_9_10_Fallacies" folder with Keynote file -->
+###  Arguments and reasoning in the wild, Weeks 11-13
+
+Week 11: Fallacies. <!-- "8_9_10_Fallacies" folder with Keynote file -->
 
 * Informal fallacies
 * Post hoc ergo propter hoc, again
   * [Video](https://www.youtube.com/watch?v=5A7hSaoRv0g) combining this fallacy with deductive and inductive logic. Good way to bring previous bits of the class together!
 
-* Ad hominem: 
+* Ad hominem "To the person": 
+  * Puerile name-calling <!--Include a Gilbert tweet -->
+  * Questioning the motive
+  * Hypocrite
+  * You’re not entitled to speak on that
+  * Appeal to authority
+* Straw man
+  * Relation to principle of charity
+* Fallacy of the single cause <!-- Relation to affirming the consequent -->
+* Circularity
+* Minimising evidence against
+  * Overwhelming exception
+  * No True Scotsman
+* Slippery slope
 
-Week 11 - `r wk10=0` <!-- "confirmationBias" Keynote -->
+Week 12 - `r wk10=0` <!-- "confirmationBias" Keynote -->
 
 * Wason card selection task, as an argument/syllogism `r wk10=wk10+ 18` <!-- 18 slides -->
   * [Confirmation bias](https://www.verywellmind.com/what-is-a-confirmation-bias-2795024)
@@ -168,7 +183,6 @@ Week 11 - `r wk10=0` <!-- "confirmationBias" Keynote -->
   * Planning fallacy <!-- 7 slides -->
 * `r wk10` slides above for this week
 
-Week 12
 
 * Why does the news have lots of false positives? <!--slides 168 to 180-->
   * Excess of statistical comparisons (already talked about this)  
@@ -186,61 +200,7 @@ knitr::include_graphics("imagesForRmd/blindingEffectFromPSYC1.png")
 ```     
   * Experimentation effect
 
-Base rates, probabilities, and correlations   <!-- TENTATIVELY TRYING OUT IN DECKSET? -->
-
-* How probabilities are presented
-* Probabilities versus frequencies
-  * When you hear a probability, think of 100 or 1000 cases
-* Correlations seemingly implied by rates <!-- (Ch. 7 of Manley)-->
-  * Which bits of the contingency table are given by a particular statement?
-
-
-Is there a correlation between being male and liking avocados?
-
-Suppose we learn that most males like avocados and also that most people who like avocadoes are male. Can we conclude that liking avocadoes is correlated with being male? It's tempting to think the answer is "yes." Understanding why that's the wrong answer is crucial to having a full understanding of correlation.
-
-For two dichomotous variables like male/female and liking avocados versus not, a positive correlation would mean that a higher proportion of males like avocado than females.
-
-We know two things
-* Most males like avocado
-* Most people who like avocado are male
-
-To establish a correlation, what we need to know is whether males like avocados at a higher rate than females do. But that simply does not follow from the fact that most males like avocados and most who like avocado are male. Look at this example:
-	
- Like Avocado      Male  Female     
---------------     ----- ------
-     No             40     38
-    Yes             60     58
-
-Table:  Number of males versus females who like and don't like avocados
-
-Most males in this example
-
-What proportion of males like avocados? <!--40%-->
-What proportion of females like avocados
-
-*	Most people in the world like avocados. So we should expect most males to like avocados even if the same proportion of males and females like avocados.
-*	Most people in the world are male (by a small amount). So we should expect most avocado eaters to be male even if males and females like avocados at the same rate.
-
-
-	Putting these two facts together still doesn't give us a correlation, because they could both be true even if males and females own cell phones at the same rate. 
-		- Make a 2 x 2 table. For base rate of each - being male and owning a cellphone. <!-- See Chapter 7, Manley -->
-
-Most northern Hemisphere residents have above world average income.
-Most people with above world average income are in the northern hemisphere.
-
-Most N. Hemisphere countries have more than 300 COVID-19 deaths.
-Most countries with more than 300 COVID-19 deaths are in the Northern Hemisphere.
-Is there a correlation between being in the N. Hemisphere and having more than 300 COVID-19 deaths?
-Maybe not, because most countries are in the N. Hemisphere anyway, so the second statement doesn't tell us much. We need more to know whether the proportion of northern hemisphere countries with >300 COVID-19 deaths is greater than the proportion of southern hemisphere countries.
-
-		- Another kind of mistake is simply that we fail to think proportionally. For example, suppose we've only observed John when it's cold and we notice that he has worn a hat 70% of the time. Can we conclude that there is a correlation in our observations between his wearing a hat and cold temperatures? Of course not! What if he wears a hat 70% of the time regardless of the temperature? In that case, there is no special correlation between his hat wearing and the cold: he just loves wearing hats.
-		
-		If we are told, "Most of the time when it's cold, John wears a hat," it's easy to forget that this is not enough to establish a correlation. To infer a correlation, we have to assume that John does not wear a hat most of the time on other days too . Maybe this is a safe assumption to make, but maybe not. The point is that if we just ignore it, we are neglecting the base rate, a mistake we encountered in the previous chapter. 
-
-
-
-  
+Week 13
 
 * Who to believe <!-- whoToBelieve Keynote file -->
   * [Telling fact from fiction in the news](https://theconversation.com/can-you-tell-fact-from-fiction-in-the-news-most-students-cant-102580)
@@ -274,51 +234,8 @@ knitr::include_graphics("imagesForRmd/brainSurgeonNotExpertPreventDementia.png")
     <!-- Contains 12 criteria for evaluating the credibility of  the source of a claim. But it's a lot and not well-structured, so should probably use something else -->
   * Video is a favorite of fake news
   * - Connecting correlation interpretation to base rate neglect.  Do it before section on media - say “and both base rate neglect and media stuff takes us back to correlations because we’re getting more data in some of the cells of the 2 x 2 than others” 
-  
-## Learning from mistakes
 
-![those really were the droids you were looking for](imagesForRmd/droids_hindsight.png)
-
-> - This stormtrooper has realized that he made a big mistake.
-That's good because then he can learn from the mistake.
-
-## The knew-it-all-along effect
-
-
-Related to not wanting to admit that one is wrong.
-
-
-![divorced](imagesForRmd/knewGetDivorced.jpg)
-
-<div class="notes">
-This guy
-
-- In retrospect thinks he knew it all along
-- The observers are skeptical. They are probably right that he didn't predict this.
-- But in retrospect, people think that they did predict something.
-- He didn't predict it, so the best thing to do is realize his error, like the stromtrooper, so he can potentially learn from it
-</div>
-
-> - If one doesn't know one made an error, one won't learn much from the error.
-And wrong theories of the world never get fixed!
-
-## "I knew he would win!"
-
-Prior to the 2012 election, average person said likelihood of
-Obama winning was 59%.  
-
-After the election, the average person (different set of people) said 
-68% (p < .001).
-
-Hindsight bias
-
-[Ulkumen, Tannnenbaum, & Fox](http://www.acrwebsite.org/volumes/v41/acr_v41_15731.pdf)
-
-Pundits carry on thinking all their political theories are correct.
-
-Kahan has shown that evoking curiousity can help. Use it on yourself, too - I'm curious why you feel that way.
-
-  
+ 
 * Conversations <!-- "conversations" Keynote file -->
   * Mindset: humility
   * Why people don't change their mind much
@@ -403,6 +320,107 @@ Marijuana and cocaine should be legal
 
 -->
 
+
+### Probably won't get to the below
+
+Base rates, probabilities, and correlations   <!-- TENTATIVELY TRYING OUT IN DECKSET? -->
+
+* How probabilities are presented
+* Probabilities versus frequencies
+  * When you hear a probability, think of 100 or 1000 cases
+* Correlations seemingly implied by rates <!-- (Ch. 7 of Manley)-->
+  * Which bits of the contingency table are given by a particular statement?
+
+
+Is there a correlation between being male and liking avocados?
+
+Suppose we learn that most males like avocados and also that most people who like avocadoes are male. Can we conclude that liking avocadoes is correlated with being male? It's tempting to think the answer is "yes." Understanding why that's the wrong answer is crucial to having a full understanding of correlation.
+
+For two dichomotous variables like male/female and liking avocados versus not, a positive correlation would mean that a higher proportion of males like avocado than females.
+
+We know two things
+* Most males like avocado
+* Most people who like avocado are male
+
+To establish a correlation, what we need to know is whether males like avocados at a higher rate than females do. But that simply does not follow from the fact that most males like avocados and most who like avocado are male. Look at this example:
+	
+ Like Avocado      Male  Female     
+--------------     ----- ------
+     No             40     38
+    Yes             60     58
+
+Table:  Number of males versus females who like and don't like avocados
+
+Most males in this example
+
+What proportion of males like avocados? <!--40%-->
+What proportion of females like avocados
+
+*	Most people in the world like avocados. So we should expect most males to like avocados even if the same proportion of males and females like avocados.
+*	Most people in the world are male (by a small amount). So we should expect most avocado eaters to be male even if males and females like avocados at the same rate.
+
+
+	Putting these two facts together still doesn't give us a correlation, because they could both be true even if males and females own cell phones at the same rate. 
+		- Make a 2 x 2 table. For base rate of each - being male and owning a cellphone. <!-- See Chapter 7, Manley -->
+
+Most northern Hemisphere residents have above world average income.
+Most people with above world average income are in the northern hemisphere.
+
+Most N. Hemisphere countries have more than 300 COVID-19 deaths.
+Most countries with more than 300 COVID-19 deaths are in the Northern Hemisphere.
+Is there a correlation between being in the N. Hemisphere and having more than 300 COVID-19 deaths?
+Maybe not, because most countries are in the N. Hemisphere anyway, so the second statement doesn't tell us much. We need more to know whether the proportion of northern hemisphere countries with >300 COVID-19 deaths is greater than the proportion of southern hemisphere countries.
+
+		- Another kind of mistake is simply that we fail to think proportionally. For example, suppose we've only observed John when it's cold and we notice that he has worn a hat 70% of the time. Can we conclude that there is a correlation in our observations between his wearing a hat and cold temperatures? Of course not! What if he wears a hat 70% of the time regardless of the temperature? In that case, there is no special correlation between his hat wearing and the cold: he just loves wearing hats.
+		
+		If we are told, "Most of the time when it's cold, John wears a hat," it's easy to forget that this is not enough to establish a correlation. To infer a correlation, we have to assume that John does not wear a hat most of the time on other days too . Maybe this is a safe assumption to make, but maybe not. The point is that if we just ignore it, we are neglecting the base rate, a mistake we encountered in the previous chapter. 
+
+
+  
+## Learning from mistakes
+
+![those really were the droids you were looking for](imagesForRmd/droids_hindsight.png)
+
+> - This stormtrooper has realized that he made a big mistake.
+That's good because then he can learn from the mistake.
+
+## The knew-it-all-along effect
+
+
+Related to not wanting to admit that one is wrong.
+
+
+![divorced](imagesForRmd/knewGetDivorced.jpg)
+
+<div class="notes">
+This guy
+
+- In retrospect thinks he knew it all along
+- The observers are skeptical. They are probably right that he didn't predict this.
+- But in retrospect, people think that they did predict something.
+- He didn't predict it, so the best thing to do is realize his error, like the stromtrooper, so he can potentially learn from it
+</div>
+
+> - If one doesn't know one made an error, one won't learn much from the error.
+And wrong theories of the world never get fixed!
+
+## "I knew he would win!"
+
+Prior to the 2012 election, average person said likelihood of
+Obama winning was 59%.  
+
+After the election, the average person (different set of people) said 
+68% (p < .001).
+
+Hindsight bias
+
+[Ulkumen, Tannnenbaum, & Fox](http://www.acrwebsite.org/volumes/v41/acr_v41_15731.pdf)
+
+Pundits carry on thinking all their political theories are correct.
+
+Kahan has shown that evoking curiousity can help. Use it on yourself, too - I'm curious why you feel that way.
+
+ 
 
 Survivorship
 * Bruce's slide #132
